# cookiecutter-rust

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  cookiecutter.json
hooks/: post_gen_project.py
tests/: test_cookiecutter_generation.py
{{cookiecutter.project_name}}/: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
{{cookiecutter.project_name}}/.github/: ISSUE_TEMPLATE.md
{{cookiecutter.project_name}}/.github/workflows/: build.yml  publish.yml  release.yml  test.yml
{{cookiecutter.project_name}}/examples/: README.md  my_example.rs
{{cookiecutter.project_name}}/src/: lib.rs
