{%- set license_names = {
    'MIT license': 'MIT',
    'BSD license': 'BSD-2-Clause',
    'ISC license': 'ISC',
    'Apache Software License 2.0': 'Apache-2.0',
    'GNU General Public License v3': 'GPL-2.0-or-later'
} -%}
[package]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
description = "{{ cookiecutter.project_short_description }}"
documentation = "https://docs.rs/{{ cookiecutter.project_name }}"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}"
readme = "README.md"
keywords = ["{{cookiecutter.project_name}}",
            # some ideas:
            #   "logging",
            #   "api",
            #   "async",
            ]
categories = [
    # "api-bindings"
]
{%- if cookiecutter.open_source_license in license_names %}
license = "{{ license_names[cookiecutter.open_source_license] }}"
{%- else %}
license = "MIT OR Apache-2.0"
{%- endif %}
edition = "2021"
exclude = [
    # (optional) list any files we don't want to publish to crates.io
    # for example, assume the below is a folder which contains large `mp4` files:
    #   "examples/assets"
]

# See here for more info: https://blog.rust-lang.org/2020/03/15/docs-rs-opt-into-fewer-targets.html

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
# version_sync: to ensure versions in `Cargo.toml` and `README.md` are in sync
version-sync = "0.9.4"
# cargo-bump: to bump package version and tag a commit at the same time.
# actually, the docs recommend installing this globally:
#   $ cargo install cargo-bump
# cargo-bump = "1.1.0"
# logging utilities
log = "^0.4"
pretty_env_logger = "0.4.0"
# tokio: for `async` support
tokio = { version = "^1.0", features = ["macros", "rt-multi-thread"] }
# Some useful libraries - uncomment if needed :-)
# tabled = "0.4.2"
# indoc = "1.0.4"
# criterion = "0.3.5"

### FEATURES #################################################################

[features]
